# neon-serde-example

./: .gitignore  README.md  package.json
lib/: benchmark.js  data.js  farm.js  from-file.js  index.js  javascript.js  js.js  rust.js
native/: Cargo.toml
native/src/: hashmap.rs  hello.rs  lib.rs  lib2.rs  main.rs  objecttuple.rs
server/: server.js
