[package]
name = "object"
version = "0.1.0"
authors = ["Taher <entrptaher@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "object"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
serde_derive = "1.0.106"
serde = "1.0.106"
serde_json = "1.0.51"
neon-serde = { git = "https://github.com/entrptaher/neon-serde" }
serde-tuple-vec-map = "*"
memmap = "0.7.0"
serde_bytes = "0.11.3"
rayon = "1.3.0"
thin-vec = "0.1.0"

[dependencies.hashbrown]
version = "0.7.1"
features = ["serde", "rayon"]
